# ros2-slam-auto-nav

./: .gitignore  CONTRIBUTING.md  EXPLORATION_CHANGES.md  INSTALL.md  LICENSE  MAPPING_TROUBLESHOOTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: preflight.yml
docs/: ARCHITECTURE.md  GITHUB_RELEASE.md
runtime/maps/: README.md
scripts/: build_workspace.sh  check_system.sh  cleanup_gazebo.sh  install_dependencies.sh  preflight_release.sh  run_app_system.sh  run_auto_mapping.sh  run_control_center.sh  run_mapping.sh  run_navigation.sh  run_wsad_teleop.sh  save_map.sh  send_room_command.sh  source_workspace.sh
workspace/src/virtual_indoor_nav/: package.xml  setup.cfg  setup.py
workspace/src/virtual_indoor_nav/config/: ekf.yaml  exploration_params.yaml  nav2_exploration_costmap_template.yaml  nav2_params.yaml  slam_toolbox.yaml
workspace/src/virtual_indoor_nav/launch/: app_system.launch.py  auto_mapping.launch.py  mapping.launch.py  nav2_live.launch.py  navigation.launch.py  sim_world.launch.py
workspace/src/virtual_indoor_nav/resource/: virtual_indoor_nav
workspace/src/virtual_indoor_nav/rviz/: default.rviz
workspace/src/virtual_indoor_nav/urdf/: indoor_bot.urdf.xacro
workspace/src/virtual_indoor_nav/virtual_indoor_nav/: __init__.py  auto_explorer.py  control_center.py  room_nav_node.py  wsad_teleop.py
workspace/src/virtual_indoor_nav/worlds/: apartment.world
